package me.dio.domain.model;

@Entity(name = "tb_combo")

public class Combo extends BaseItens {
    


}