package me.dio.domain.model;

import jakarta.persistence.Entity;

@Entity(name = "tb_product")

public class Product extends BaseItens {
    

}